Fixed .left-side image to not mis align with bottom block.

--- a/css/style-blue.css
+++ b/css/style-blue.css
@@ -101,17 +101,17 @@ button[type="button"]{ border:none; background:none;}
 .navbar-default{ background:none; border:none; padding:10px 0; float: left;}
 .navbar-default{transition-delay:0.7s !important; -webkit-transition: all 0.4s ease; -moz-transition: all 0.4s ease; -ms-transform:all 0.4s ease; transition: all 0.4s ease;}
 .navbar-default{transform: translateY(-100%); -moz-transform:translateY(-100%); -ms-transform:translateY(-100%); -o-transform:translateY(-100%); -webkit-transform:translateY(-100%);}
-.navbar-default .navbar-brand{ height:auto; float: left; }
-.navbar-default .navbar-brand img{ height:50px; float: left;}
-.navbar-default .social-media{ float:right; margin:10px 0; padding:0;}
-.navbar-default .social-media li{ float:right; margin:0 6px; padding:0; list-style:none;}
-.navbar-default .social-media li a{ width:42px; height:42px; float:left; text-align:center; line-height:38px; border:2px solid #000000; border-radius:50%; color:#000000;}
-.navbar-default .social-media li a:hover{ background:#ffffff; border:2px solid #ffffff;}
+.navbar-default .navbar-brand{ height:auto; }
+.navbar-default .navbar-brand img{ height:50px; }
+.navbar-default .social-media{ margin:10px 0; padding:0; }
+.navbar-default .social-media li{ float:right; margin:0 6px; padding:0; list-style:none; }
+.navbar-default .social-media li a{ width:42px; height:42px; float: right;text-align:center; line-height:38px; border:2px solid #000000; border-radius:50%; color:#000000;}
+.navbar-default .social-media li a:hover{ background:#ffffff; border:2px solid #ffffff; float: right;}
 
 
 /* HEADER */
-.header{ width:100%; height:100%; float:left; background:#ffffff; position:relative; transition-delay:0.7s;}
-.header{-webkit-transition: all 0.7s ease; -moz-transition: all 0.7s ease; -ms-transform:all 0.7s ease; transition: all 0.7s ease;}
+.header{ width:100%; height:100%; float:left; background:#ffffff; position:relative; }
+.header{}
 .header{transform: translateY(50%); -moz-transform:translateY(50%); -ms-transform:translateY(50%); -o-transform:translateY(50%); -webkit-transform:translateY(50%);}
 .header .left-side{ width:40%; height:100%; position:absolute; left:0; top:0; background:url(../ASSETS/HeaderImage2.jpg) center no-repeat; background-size:cover;}
 .header .right-side{ width:70%; height:100%; position:absolute; right:0; top:0; left no-repeat; background-size:auto 100%;}
